# ski-recommender

./: .dockerignore  .gitignore  DP_table.py  Dockerfile  ES_testing.ipynb  Makefile  README.md  WP_prediction.ipynb  WP_table.py  add_colors.py  adding_colors.ipynb  appspec.yaml  buildspec.yml  capstone_EDA.ipynb  capstone_add_grooming.ipynb  clustering.ipynb  comb_tables.py  cosine_sims.ipynb  cosine_sims.py  df.pkl  docker_requirements.txt  euclidean_dists.ipynb  get_temp_snowfall.ipynb  loveland_table.py  make_mtn_df.py  mountain_recommender.ipynb  mtn_df.pkl  pyproject.toml  resort_dict.pkl  resort_stats.py  task_list.txt  visualizations.ipynb  webscrape_trails.py
.circleci/: config.yml
.ipynb_checkpoints/: adding_colors-Copy1-checkpoint.ipynb  adding_colors-Copy2-checkpoint.ipynb  adding_colors-checkpoint.ipynb  capstone_add_grooming-checkpoint.ipynb  cosine_sims-checkpoint.ipynb  fixing_trail_names-checkpoint.ipynb  visualizations-checkpoint.ipynb
aws/: 1_create_cluster.yaml  2_codebuild.yaml  3_ecs_task_definition.yaml  aws.md
create_tables/: BC_table.py
data/: .~lock.WP.csv#  Alpine_Meadows.txt  Aspen_Snowmass.txt  Beaver_Creek.txt  Loveland.txt  Monarch.txt  Steamboat.txt  Vail.txt  WP.csv  combined_data_20200306.csv  combined_data_20200311.csv  combined_data_20200421.csv  combined_data_20200423.csv  df.pkl  df2.pkl  groomed_trails.json  mountain_data_20200306.parquet  mountain_data_20200421.parquet  mountain_data_20200423.parquet  resort_dict2.pkl  trail_data_20200306.csv  trail_data_20200311.csv  trail_data_20200421.parquet  trail_data_20200423.parquet  trail_data_processed_20220114.parquet
notebooks/: WP_prediction.ipynb  adding_colors-Copy2.ipynb  adding_colors.ipynb  adding_colors2.ipynb  capstone_EDA.ipynb  capstone_add_grooming.ipynb  capstone_add_grooming2.ipynb  clustering.ipynb  cosine_sims.ipynb  euclidean_dists.ipynb  fixing_trail_names.ipynb  get_temp_snowfall.ipynb  mountain_recommender.ipynb  ski_recsys.ipynb  supervised_learning.ipynb  visualizations.ipynb
src/: comb_tables.py  comb_tables2.py  (+7 more)
(+56 files in other folders)
