[tool.poetry]
name = "ski-recommender"
version = "0.1.0"
description = "Ski run recommendation system"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
beautifulsoup4 = "^4.9.3"
blinker = "^1.4"
fastapi = "^0.70.1"
Flask = "^2.0.2"
ipython = "^7.30.1"
matplotlib = "^3.3.2"
numpy = "^1.21.5"
pandas = "^1.3.5"
pyarrow = "^6.0.1"
requests = "^2.26.0"
scikit-learn = "^0.24.1"
selenium = "^4.1.0"
tqdm = "^4.62.3"
uvicorn = "^0.16.0"
lxml = "^4.7.1"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
